// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component/AlertStatus Alert Error Story 1`] = `
<div
  className="alert error"
>
  <span
    className="closebtn"
    onClick={[Function]}
  >
    ×
  </span>
  Error Message
</div>
`;

exports[`Storyshots Component/AlertStatus Alert Info Story 1`] = `
<div
  className="alert info"
>
  <span
    className="closebtn"
    onClick={[Function]}
  >
    ×
  </span>
  Info messsage
</div>
`;

exports[`Storyshots Component/AlertStatus Alert Success Story 1`] = `
<div
  className="alert success"
>
  <span
    className="closebtn"
    onClick={[Function]}
  >
    ×
  </span>
  Success messsage
</div>
`;

exports[`Storyshots Component/AlertStatus Alert Warning Story 1`] = `
<div
  className="alert warning"
>
  <span
    className="closebtn"
    onClick={[Function]}
  >
    ×
  </span>
  Warning messsage
</div>
`;

exports[`Storyshots Component/Button Default Button Story 1`] = `
<button
  className="storybook-button storybook-button--medium storybook-button--secondary"
  onClick={[Function]}
  style={null}
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Component/Button Large Button Story 1`] = `
<button
  className="storybook-button storybook-button--large storybook-button--secondary"
  onClick={[Function]}
  style={null}
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Component/Button Primary Button Story 1`] = `
<button
  className="storybook-button storybook-button--medium storybook-button--primary"
  onClick={[Function]}
  style={null}
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Component/Button Small Button Story 1`] = `
<button
  className="storybook-button storybook-button--small storybook-button--secondary"
  onClick={[Function]}
  style={null}
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Component/Card Card Story 1`] = `
<li
  className="card"
>
  <div
    className="container"
  >
    <h4>
      <b>
        John Doe
      </b>
    </h4>
    <p>
      Architect & Engineer
    </p>
    <img
      alt="Avatar"
      src="https://www.w3schools.com/howto/img_avatar.png"
    />
  </div>
</li>
`;

exports[`Storyshots Component/Cards Default Layout Story 1`] = `
<ul
  style={
    Object {
      "display": "grid",
      "gridGap": "20px",
      "gridTemplateColumns": "repeat(4, 1fr)",
    }
  }
>
  <li
    className="card"
  >
    <h1>
      1
    </h1>
  </li>
  <li
    className="card"
  >
    <h1>
      2
    </h1>
  </li>
  <li
    className="card"
  >
    <h1>
      3
    </h1>
  </li>
  <li
    className="card"
  >
    <h1>
      4
    </h1>
  </li>
  <li
    className="card"
  >
    <h1>
      5
    </h1>
  </li>
  <li
    className="card"
  >
    <h1>
      6
    </h1>
  </li>
  <li
    className="card"
  >
    <h1>
      7
    </h1>
  </li>
  <li
    className="card"
  >
    <h1>
      8
    </h1>
  </li>
</ul>
`;

exports[`Storyshots Component/Cards Two Column Layout Story 1`] = `
<ul
  style={
    Object {
      "display": "grid",
      "gridGap": "20px",
      "gridTemplateColumns": "repeat(2, 1fr)",
    }
  }
>
  <li
    className="card"
  >
    <h1>
      1
    </h1>
  </li>
  <li
    className="card"
  >
    <h1>
      2
    </h1>
  </li>
  <li
    className="card"
  >
    <h1>
      3
    </h1>
  </li>
  <li
    className="card"
  >
    <h1>
      4
    </h1>
  </li>
  <li
    className="card"
  >
    <h1>
      5
    </h1>
  </li>
  <li
    className="card"
  >
    <h1>
      6
    </h1>
  </li>
  <li
    className="card"
  >
    <h1>
      7
    </h1>
  </li>
  <li
    className="card"
  >
    <h1>
      8
    </h1>
  </li>
</ul>
`;

exports[`Storyshots Component/Cards Zero Column Layout Story 1`] = `
<ul
  style={
    Object {
      "display": "grid",
      "gridGap": "20px",
      "gridTemplateColumns": "repeat(4, 1fr)",
    }
  }
>
  <li
    className="card"
  >
    <h1>
      1
    </h1>
  </li>
  <li
    className="card"
  >
    <h1>
      2
    </h1>
  </li>
  <li
    className="card"
  >
    <h1>
      3
    </h1>
  </li>
  <li
    className="card"
  >
    <h1>
      4
    </h1>
  </li>
  <li
    className="card"
  >
    <h1>
      5
    </h1>
  </li>
  <li
    className="card"
  >
    <h1>
      6
    </h1>
  </li>
  <li
    className="card"
  >
    <h1>
      7
    </h1>
  </li>
  <li
    className="card"
  >
    <h1>
      8
    </h1>
  </li>
</ul>
`;

exports[`Storyshots Component/Header No User Existing Story 1`] = `
<header>
  <div
    className="wrapper"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
      <h1>
        Acme
      </h1>
    </div>
    <div>
      <button
        className="storybook-button storybook-button--small storybook-button--secondary"
        onClick={[Function]}
        style={null}
        type="button"
      >
        Log in
      </button>
      <button
        className="storybook-button storybook-button--small storybook-button--primary"
        onClick={[Function]}
        style={null}
        type="button"
      >
        Sign up
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Component/Header User Existing In Story 1`] = `
<header>
  <div
    className="wrapper"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
      <h1>
        Acme
      </h1>
    </div>
    <div>
      <button
        className="storybook-button storybook-button--small storybook-button--secondary"
        onClick={[Function]}
        style={null}
        type="button"
      >
        Log out
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Component/Hello Hello Stranger Story 1`] = `
<h1
  className="name"
>
  Hello 
  stranger
</h1>
`;

exports[`Storyshots Component/Hello Hello User Story 1`] = `
<h1
  className="name"
>
  Hello 
  Jane Doe
</h1>
`;

exports[`Storyshots Component/LoadingStatus Default Loading Status Story 1`] = `
<p>
  Loading ...
</p>
`;

exports[`Storyshots Component/LoadingStatus Incorporate Custom Display Name Story 1`] = `
<p>
  Poor mans loader ...
</p>
`;

exports[`Storyshots Component/MarsRoverImages Mars Rover Default Story 1`] = `
<div
  className="Mars-Rover-Images"
>
  <div
    className="App-intro"
  >
    <img
      alt="logo"
      className="Mars-Rover-logo"
      src="nasa-logo-300x250.png"
    />
  </div>
  <span>
    Data provided by NASA.
  </span>
  <br />
  <span>
    Each photo was taken on the rover's 100th sol (day) on Mars.
  </span>
  <br />
  <br />
  <label>
    Choose a Mars rover:
    <select
      className="select-css"
      onChange={[Function]}
      value="curiosity"
    >
      <option
        value="curiosity"
      >
        Curiosity
      </option>
      <option
        value="spirit"
      >
        Spirit
      </option>
      <option
        value="opportunity"
      >
        Opportunity
      </option>
    </select>
  </label>
  <br />
  <label>
    Choose a camera:
    <select
      className="select-css"
      onChange={[Function]}
      value=""
    >
      <option
        value=""
      >
        Choose a camera
      </option>
      <optgroup
        label="Spirit or Opportunity or Curiosity"
      >
        <option
          value="NAVCAM"
        >
          Navigation Camera
        </option>
      </optgroup>
      <optgroup
        label="Spirit or Opportunity"
      >
        <option
          value="PANCAM"
        >
          Panoramic Camera
        </option>
      </optgroup>
      <optgroup
        label="Curiosity"
      >
        <option
          value="FHAZ"
        >
          Front Hazard Avoidance Camera
        </option>
        <option
          value="RHAZ"
        >
          Rear Hazard Avoidance Camera
        </option>
        <option
          value="MAST"
        >
          Mast Camera
        </option>
        <option
          value="CHEMCAM"
        >
          Chemistry and Camera Complex
        </option>
      </optgroup>
    </select>
  </label>
  <div>
    <p>
      Loading images ...
    </p>
    <br />
  </div>
  <div>
    <img
      alt="none found"
      src="no-photo-400X300.png"
    />
  </div>
</div>
`;

exports[`Storyshots Component/MarsRoverImages Mars Rover With Presets Story 1`] = `
<div
  className="Mars-Rover-Images"
>
  <div
    className="App-intro"
  >
    <img
      alt="logo"
      className="Mars-Rover-logo"
      src="nasa-logo-300x250.png"
    />
  </div>
  <span>
    Data provided by NASA.
  </span>
  <br />
  <span>
    Each photo was taken on the rover's 100th sol (day) on Mars.
  </span>
  <br />
  <br />
  <label>
    Choose a Mars rover:
    <select
      className="select-css"
      onChange={[Function]}
      value="spirit"
    >
      <option
        value="curiosity"
      >
        Curiosity
      </option>
      <option
        value="spirit"
      >
        Spirit
      </option>
      <option
        value="opportunity"
      >
        Opportunity
      </option>
    </select>
  </label>
  <br />
  <label>
    Choose a camera:
    <select
      className="select-css"
      onChange={[Function]}
      value="NAVCAM"
    >
      <option
        value=""
      >
        Choose a camera
      </option>
      <optgroup
        label="Spirit or Opportunity or Curiosity"
      >
        <option
          value="NAVCAM"
        >
          Navigation Camera
        </option>
      </optgroup>
      <optgroup
        label="Spirit or Opportunity"
      >
        <option
          value="PANCAM"
        >
          Panoramic Camera
        </option>
      </optgroup>
      <optgroup
        label="Curiosity"
      >
        <option
          value="FHAZ"
        >
          Front Hazard Avoidance Camera
        </option>
        <option
          value="RHAZ"
        >
          Rear Hazard Avoidance Camera
        </option>
        <option
          value="MAST"
        >
          Mast Camera
        </option>
        <option
          value="CHEMCAM"
        >
          Chemistry and Camera Complex
        </option>
      </optgroup>
    </select>
  </label>
  <div>
    <p>
      Loading images ...
    </p>
    <br />
  </div>
  <div>
    <img
      alt="none found"
      src="no-photo-400X300.png"
    />
  </div>
</div>
`;

exports[`Storyshots Component/ShinySelect Option And Groups Story 1`] = `
<label>
  Select a car
  <select
    className="select-css"
    onChange={[Function]}
    value=""
  >
    <option
      value=""
    >
      Select a car
    </option>
    <optgroup
      label="Swedish Cars"
    >
      <option
        value="volvo"
      >
        Volvo
      </option>
      <option
        value="saab"
      >
        Saab
      </option>
    </optgroup>
    <optgroup
      label="German Cars"
    >
      <option
        value="vw"
      >
        VW
      </option>
      <option
        value="mercedes"
      >
        Merc
      </option>
      <option
        value="audi"
      >
        Audi
      </option>
    </optgroup>
  </select>
</label>
`;

exports[`Storyshots Component/ShinySelect Option Groups Story 1`] = `
<label>
  Select a car
  <select
    className="select-css"
    onChange={[Function]}
    value="volvo"
  >
    <optgroup
      label="Swedish Cars"
    >
      <option
        value="volvo"
      >
        Volvo
      </option>
      <option
        value="saab"
      >
        Saab
      </option>
    </optgroup>
    <optgroup
      label="German Cars"
    >
      <option
        value="vw"
      >
        VW
      </option>
      <option
        value="mercedes"
      >
        Merc
      </option>
      <option
        value="audi"
      >
        Audi
      </option>
    </optgroup>
  </select>
</label>
`;

exports[`Storyshots Component/ShinySelect Simple Options Story 1`] = `
<label>
  Choose a Mars rover
  <select
    className="select-css"
    onChange={[Function]}
    value=""
  >
    <option
      value=""
    >
      Select your option
    </option>
    <option
      value="curiosity"
    >
      Curiosity
    </option>
    <option
      value="spirit"
    >
      Spirit
    </option>
    <option
      value="opportunity"
    >
      Opportunity
    </option>
  </select>
</label>
`;

exports[`Storyshots Component/ShinySelect Values Only Story 1`] = `
<label>
  <select
    className="select-css"
    onChange={[Function]}
    value=""
  >
    <option
      value=""
    >
      Select a car
    </option>
    <option
      value="volvo"
    >
      volvo
    </option>
    <option
      value="saab"
    >
      saab
    </option>
    <option
      value="vw"
    >
      vw
    </option>
    <option
      value="mercedes"
    >
      mercedes
    </option>
    <option
      value="audi"
    >
      audi
    </option>
  </select>
</label>
`;

exports[`Storyshots Component/Thumbnail Simple Thumbnail Story 1`] = `
<img
  alt="Jest logo"
  className="thumbnail"
  src="https://miro.medium.com/max/1592/0*aaeiaAX5kMyHCQZT.png"
  style={
    Object {
      "border": "1px solid yellow",
    }
  }
/>
`;

exports[`Storyshots Component/User Details User Details Not Found Story 1`] = `"loading ..."`;

exports[`Storyshots Component/User Details User Details With Id Story 1`] = `"loading ..."`;
